03_ingress_minikube/echo-ingress-ratelimit.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress-rate-limit
  annotations:
    gravitee.io/template: rate-limit-policy-template
spec:
  ingressClassName: graviteeio
  rules:
    - http:
        paths:
          - path: /echo-rate-limit
            pathType: Prefix
            backend:
              service:
                name: gravitee-echo-api
                port:
                  number: 80
