03_ingress_minikube/echo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: graviteeio
spec:
  ingressClassName: graviteeio
  rules:
    - http:
        paths:
          - path: /echo
            pathType: Prefix
            backend:
              service:
                name: gravitee-echo-api
                port:
                  number: 80
